arreglando idiomas, falta completar con todos los textos

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
-    "tituloNavBarIzquierda" : "PROYECTS",
-    "tituloNavBarDerecha" : "STUDIO"
+  "tituloNavBarIzquierda": "PROYECTS",
+  "tituloNavBarDerecha": "STUDIO",
+  "textInitial": "OrdoñezWenzke is an international studio for architecture and interior design based in Buenos Aires. Studio OW was established in 2017 by Argentinian architect Florencia Ordoñez and German architect Dipl.Ing. Nik Wenzke. Studio OW is distinguished by its interdisciplinary approach to the respective conditions and dynamics of each project. With experience and flexibility, the studio adapts to a variety of scales and challenges. A constant search for pure morphologies and for functional and novel spaces unites the partners and their expertise, to guarantee smart solutions for even the most demanding concepts and projects. Over time, this way of working together has developed into a signature style. It forms the basis for every new project to achieve outstanding results that are as original as they are personal."
 }
