--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,4 +1,5 @@
 {
-    "tituloNavBarIzquierda" : "PROYECTOS",
-    "tituloNavBarDerecha" : "ESTUDIO"
+  "tituloNavBarIzquierda": "PROYECTOS",
+  "tituloNavBarDerecha": "ESTUDIO",
+  "textInitial": "Ordoñez Wenzke es un estudio de arquitectura e interiorismo con sede en Buenos Aires y presencia internacional. Formado en 2017 por la Arquitecta argentina Florencia Ordóñez y el Arquitecto (Dipl.Ing) alemán Nik Wenzke, OW se caracteriza por su aproximación interdisciplinaria a la dinámica proyectual. En su búsqueda constante de morfologías puras y espacios novedosos, el Estudio unifica las experiencias personales de cada una de las partes garantizando así soluciones sagaces incluso a las obras más demandantes."
 }
